<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/weightbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openWeightActivity"
        android:text="@string/weightBtnTxt"
        app:layout_constraintBottom_toTopOf="@+id/eatbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/eatbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eatBtnTxt"
        app:layout_constraintBottom_toTopOf="@+id/statsbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightbtn" />

    <Button
        android:id="@+id/statsbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openStatsActivity"
        android:text="@string/viewBtnTxt"
        app:layout_constraintBottom_toTopOf="@+id/ingredientbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eatbtn" />

    <Button
        android:id="@+id/ingredientbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openIngredientActivity"
        android:text="@string/ingBtnTxt"
        app:layout_constraintBottom_toTopOf="@+id/mealbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statsbtn" />

    <Button
        android:id="@+id/mealbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openMealActivity"
        android:text="@string/mealBtnTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientbtn" />
</androidx.constraintlayout.widget.ConstraintLayout>