<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddIngredientActivity">

    <EditText
        android:id="@+id/nameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/gramsTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/calorieTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:ems="10"
        android:inputType="number"
        android:onClick="clearTextBox"
        app:layout_constraintBottom_toTopOf="@+id/fatTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gramsTxt" />

    <EditText
        android:id="@+id/fatTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/carbTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calorieTxt" />

    <EditText
        android:id="@+id/carbTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/proteinTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fatTxt" />

    <EditText
        android:id="@+id/proteinTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/addIngredientBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carbTxt" />

    <Button
        android:id="@+id/addIngredientBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ingredientBtnClick"
        android:text="@string/addIngredientBtnTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proteinTxt"
        app:layout_constraintVertical_bias="0.346" />

    <EditText
        android:id="@+id/gramsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/calorieTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTxt" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameTxtTxt"
        app:layout_constraintBottom_toBottomOf="@+id/nameTxt"
        app:layout_constraintEnd_toStartOf="@+id/nameTxt"
        app:layout_constraintTop_toTopOf="@+id/nameTxt" />

    <TextView
        android:id="@+id/gramLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gramTxtTxt"
        app:layout_constraintBottom_toBottomOf="@+id/gramsTxt"
        app:layout_constraintEnd_toStartOf="@+id/gramsTxt"
        app:layout_constraintTop_toTopOf="@+id/gramsTxt" />

    <TextView
        android:id="@+id/calorieLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calorieTxtTxt"
        app:layout_constraintBottom_toBottomOf="@+id/calorieTxt"
        app:layout_constraintEnd_toStartOf="@+id/calorieTxt"
        app:layout_constraintTop_toTopOf="@+id/calorieTxt" />

    <TextView
        android:id="@+id/fatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fatTxtTxt"
        app:layout_constraintBottom_toBottomOf="@+id/fatTxt"
        app:layout_constraintEnd_toStartOf="@+id/fatTxt"
        app:layout_constraintTop_toTopOf="@+id/fatTxt" />

    <TextView
        android:id="@+id/carbLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carbTxtTxt"
        app:layout_constraintBottom_toBottomOf="@+id/carbTxt"
        app:layout_constraintEnd_toStartOf="@+id/carbTxt"
        app:layout_constraintTop_toTopOf="@+id/carbTxt" />

    <TextView
        android:id="@+id/proteinLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proteinTxtTxt"
        app:layout_constraintBottom_toBottomOf="@+id/proteinTxt"
        app:layout_constraintEnd_toStartOf="@+id/proteinTxt"
        app:layout_constraintTop_toTopOf="@+id/proteinTxt" />
</androidx.constraintlayout.widget.ConstraintLayout>